<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rotationX="4"
    tools:context=".app.StartFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="376dp"
        android:layout_marginTop="350dp">

        <Button
            android:id="@+id/btnStart_game"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="119dp"
            android:text="@string/start_game"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnStart_game" />

        <Button
            android:id="@+id/btnAbout_the_game"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/about_the_game"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSettings" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>