<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_all"
    tools:context=".fragment.aboutGame.AboutGameFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1558" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_toolbar"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.27" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.752" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.061" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.195" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/backBtn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/gl16"
            app:layout_constraintStart_toStartOf="@+id/gl15"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2439" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.768" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.358" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.653" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/rubik"
            android:gravity="center"
            android:text="@string/about"
            android:textColor="#FFB24C"
            android:textStyle="bold"
            app:autoSizePresetSizes="@array/autosize_settings"
            app:layout_constraintBottom_toTopOf="@+id/gl20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gl19" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="viewStart"
        android:textDirection="firstStrongLtr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="@id/guideline12">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/rubik"
                android:text="@string/text_about_game1"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#4A6495"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif"
                tools:layout_editor_absoluteX="1dp" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/rubik"
                android:text="@string/text_about_game2"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#4A6495"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/rubik"
                android:text="@string/text_about_game3"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#4A6495"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/rubik"
                android:text="@string/text_about_game4"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#4A6495"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif" />


            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/rubik"
                android:text="@string/text_about_game6"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#4A6495"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif" />


        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>