<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.selectTeams.SelectTeamsFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1558" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_toolbar"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.27" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.752" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.061" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.195" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/backBtn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/gl16"
            app:layout_constraintStart_toStartOf="@+id/gl15"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2439" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.768" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.358" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.653" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/rubik"
            android:gravity="center"
            android:text="@string/game"
            android:textColor="#FFB24C"
            android:textStyle="bold"
            app:autoSizePresetSizes="@array/autosize_settings"
            app:layout_constraintBottom_toTopOf="@+id/gl20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gl19"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_background_all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.055" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1722" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2212" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3048" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3448" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTeam1Titles"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ic_command_background"
            android:ems="10"
            android:elevation="4dp"
            android:fontFamily="@font/rubik"
            android:textColor="#ACB4C3"
            android:textColorHint="#ACB4C3"
            android:paddingStart="16dp"
            android:textStyle="bold"
            app:autoSizePresetSizes="@array/autosize_settings"
            android:hint="@string/team1_title"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/gl5"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/gl4" />

        <TextView
            android:id="@+id/teamsTitles"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:fontFamily="@font/rubik"
            android:textColor="#4A6495"
            android:textStyle="bold"
            app:autoSizePresetSizes="@array/autosize_settings"
            android:text="@string/select_teams_title"
            app:layout_constraintBottom_toTopOf="@+id/gl1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <TextView
            android:id="@+id/team1Titles"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/team1_title"
            android:gravity="center"
            android:fontFamily="@font/rubik"
            android:textColor="#4A6495"
            android:textStyle="bold"
            app:autoSizePresetSizes="@array/autosize_settings"
            app:layout_constraintBottom_toTopOf="@+id/gl3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gl2" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3854" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4661" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTeam2Titles"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ems="10"
            android:background="@drawable/ic_command_background"
            android:elevation="4dp"
            android:hint="@string/team2_title"
            android:fontFamily="@font/rubik"
            android:textColor="#ACB4C3"
            android:textColorHint="#ACB4C3"
            android:paddingStart="16dp"
            android:textStyle="bold"
            app:autoSizePresetSizes="@array/autosize_settings"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/gl10"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/gl8" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.537" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.577" />



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6209" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6209" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7016" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7867" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8709" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2214" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7857" />

        <TextView
            android:id="@+id/team2Titles"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/team2_title"
            android:fontFamily="@font/rubik"
            android:textColor="#4A6495"
            android:textStyle="bold"
            android:gravity="center"
            app:autoSizePresetSizes="@array/autosize_settings"
            app:layout_constraintBottom_toTopOf="@+id/gl7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gl6" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextBtn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/select_teams_next_btn"
            android:textColor="#B67C62"
            android:textSize="16sp"
            android:fontFamily="@font/rubik"
            android:background="@drawable/ic_bt"
            app:layout_constraintBottom_toTopOf="@+id/gl12"
            app:layout_constraintEnd_toStartOf="@+id/gl26"
            app:layout_constraintStart_toStartOf="@+id/gl25"
            app:layout_constraintTop_toTopOf="@+id/gl11" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.945" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.21" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>